--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,76 +1,45 @@
-name: CI
+name: Build & Test
 
 # this is triggered on push to the repository
 on: [push, pull_request]
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
-        with:
-          go-version: 1.15.x
-      - name: Execute gofmt
-        run: gofmt -s .
-      - name: Execute golint
-        run: |
-          go get -u golang.org/x/lint/golint
-          golint -set_exit_status ./...
-      - name: Execute ineffassign
-        run: |
-          go get -u github.com/gordonklaus/ineffassign
-          ineffassign ./...
-      - name: Execute misspell
-        run: |
-          go get -u github.com/client9/misspell/cmd/misspell
-          misspell ./...
-      - name: Execute errcheck
-        run: |
-          go get -u github.com/kisielk/errcheck
-          errcheck ./...
-      - name: Execute gosec
-        run: |
-          go get -u github.com/securego/gosec/cmd/gosec
-          gosec ./...
-      - name: Execute staticcheck
-        run: |
-          go get -u honnef.co/go/tools/cmd/staticcheck
-          staticcheck -tests=0 ./...
-      - name: Execute go vet
-        run: go vet -race ./...
-  test:
-    strategy:
-      matrix:
-        platform: [ubuntu-latest, macos-latest, windows-latest]
-      fail-fast: true
-    runs-on: ${{ matrix.platform }}
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
-        with:
-          go-version: 1.15.x
-      - name: Test
-        run: go test -v ./... -race -coverprofile=coverage.txt -covermode=atomic
-      - name: Push Coverage to codecov.io
-        uses: codecov/codecov-action@v1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./coverage.txt
   build:
+    name: "Build"
     strategy:
       matrix:
-        go-version: [1.13.x, 1.14.x, 1.15.x]
+        go-version: [1.16.x, 1.17.x]
         platform: [ubuntu-latest, macos-latest, windows-latest]
       fail-fast: true
     runs-on: ${{ matrix.platform }}
     steps:
-      - uses: actions/checkout@v2
       - name: Install Go
         uses: actions/setup-go@v2
         with:
           go-version: ${{ matrix.go-version }}
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2.3.5
       - name: Build
         run: go build ./...
+  test:
+    name: "Unit Tests"
+    needs: [build]
+    strategy:
+      matrix:
+        platform: [ubuntu-latest, macos-latest, windows-latest]
+      fail-fast: true
+    runs-on: ${{ matrix.platform }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2.3.5
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.17.x
+      - name: Test
+        run: go test -v ./... -race -coverprofile=coverage.txt -covermode=atomic
+      - name: Push Coverage to codecov.io
+        uses: codecov/codecov-action@v2.1.0
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./coverage.txt
